# os-lab1

./: .gitignore  CMakeLists.txt  README.md  stats.txt  top_results.txt
.devcontainer/: Dockerfile  clang  clang++  clang-format  clang-tidy  devcontainer.bash
benchmark/: CMakeLists.txt
benchmark/monolith/: BinarySearchBench.cpp  Fun.cpp  Fun.hpp  MultiThreadedBench.cpp  SearchByNameBench.cpp
cmake/: FindGBenchmark.cmake
dd/dd.xcodeproj/: project.pbxproj
dd/dd.xcodeproj/project.xcworkspace/xcuserdata/zirtoshka.xcuserdatad/: UserInterfaceState.xcuserstate
source/: CMakeLists.txt
source/monolith/: MessageTools.cpp  MessageTools.hpp  Shell.cpp  Shell.hpp
source/monolith/app/: Main.cpp
test/monolith/: HelloWorldTest.cpp  ShellTest.cpp
